--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Multi Room Game</title>
   <style>
     body{
-      background-color: black;
+      background-color: rgb(0, 0, 0);
     }
   </style>
 </head>
